@@ -11,6 +11,7 @@ import com.github.catvod.net.OkResult;
 import com.github.catvod.spider.Init;
 import com.github.catvod.utils.Json;
 import com.github.catvod.utils.Path;
+import com.github.catvod.utils.ProxyVideo;
 import com.github.catvod.utils.Util;
 
 import org.apache.commons.lang3.StringUtils;
@@ -39,6 +40,21 @@ public class QuarkApi {
     private boolean isVip = false;
     private final Cache cache;
 
+    private static class Loader {
+        static volatile QuarkApi INSTANCE = new QuarkApi();
+    }
+
+    public static QuarkApi get() {
+        return QuarkApi.Loader.INSTANCE;
+    }
+
+
+    public void initQuark(String cookie) throws Exception {
+        this.ckey = Util.MD5(cookie);
+        this.cookie = cookie;
+        this.isVip = getVip();
+    }
+
     private QuarkApi() {
         Init.checkPermission();
 
@@ -55,11 +71,26 @@ public class QuarkApi {
         List<Item> subs = new ArrayList<>();
         List<Map<String, Object>> listData = listFile(1, shareData, files, subs, shareData.getShareId(), shareData.getFolderId(), 1);
 
-        List<String> playFrom = Arrays.asList("轉存原畫", "分享原畫", "代理普畫");
-        List<String> episode = new ArrayList<>();
+        List<String> playFrom = QuarkApi.get().getPlayFormatList();
+
         List<String> playUrl = new ArrayList<>();
 
-        for (int i = 0; i < playFrom.size(); i++) playUrl.add(TextUtils.join("#", episode));
+        if (files.isEmpty()) {
+            return null;
+        }
+        for (int i = 0; i < files.get(files.size() - 1).getShareIndex(); i++) {
+            for (int index = 0; index < playFrom.size(); index++) {
+                List<String> vodItems = new ArrayList<>();
+                for (Item video_item : files) {
+                    if (video_item.getShareIndex() == i + 1) {
+                        vodItems.add(video_item.getEpisodeUrl("电影"));// + findSubs(video_item.getName(), subs));
+                    }
+                }
+                playUrl.add(TextUtils.join("#", vodItems));
+            }
+        }
+
+
         Vod vod = new Vod();
         vod.setVodId("");
         vod.setVodContent("");
@@ -68,23 +99,24 @@ public class QuarkApi {
         vod.setVodPlayUrl(TextUtils.join("$$$", playUrl));
         vod.setVodPlayFrom(TextUtils.join("$$$", playFrom));
         vod.setTypeName("夸克云盘");
-        return null;
+        return vod;
     }
 
-    private static class Loader {
-        static volatile QuarkApi INSTANCE = new QuarkApi();
+    public String playerContent(String[] split, String flag) throws Exception {
+
+        String[] id_list = split;
+        String shareId = id_list[2], stoken = id_list[3], fileId = id_list[0], fileToken = id_list[1];
+        String playUrl = "";
+        if (flag.contains("原画")) {
+            playUrl = this.getDownload(shareId, stoken, fileId, fileToken, true);
+        } else {
+            playUrl = this.getLiveTranscoding(shareId, stoken, fileId, fileToken, flag);
+        }
+        Map<String, String> header = getHeaders();
+        header.remove("Host");
+        return ProxyVideo.buildCommonProxyUrl(playUrl, header);
     }
 
-    public static QuarkApi get() {
-        return QuarkApi.Loader.INSTANCE;
-    }
-
-
-    public void initQuark(String cookie) throws Exception {
-        this.ckey = bytesToHex(MessageDigest.getInstance("MD5").digest(cookie.getBytes()));
-        this.cookie = cookie;
-        this.isVip = getVip();
-    }
 
     private Map<String, String> getHeaders() {
         Map<String, String> headers = new HashMap<>();
@@ -96,15 +128,24 @@ public class QuarkApi {
         return headers;
     }
 
-    private String api(String url, Map<String, String> data, Integer retry, String method) throws Exception {
+    /**
+     * @param url
+     * @param params get 参数
+     * @param data   post json
+     * @param retry
+     * @param method
+     * @return
+     * @throws Exception
+     */
+    private String api(String url, Map<String, String> params, Map<String, Object> data, Integer retry, String method) throws Exception {
 
 
         int leftRetry = retry != null ? retry : 3;
         OkResult okResult;
         if ("GET".equals(method)) {
-            okResult = OkHttp.get(this.apiUrl + url, data, getHeaders());
+            okResult = OkHttp.get(this.apiUrl + url, params, getHeaders());
         } else {
-            okResult = OkHttp.post(this.apiUrl + url, data, getHeaders());
+            okResult = OkHttp.post(this.apiUrl + url, Json.toJson(data), getHeaders());
         }
 
 
@@ -120,7 +161,7 @@ public class QuarkApi {
 
         if (okResult.getCode() != 200 && leftRetry > 0) {
             Thread.sleep(1000);
-            return api(url, data, leftRetry - 1, method);
+            return api(url, params, data, leftRetry - 1, method);
         }
         return okResult.getBody();
     }
@@ -135,11 +176,11 @@ public class QuarkApi {
     }
 
     private boolean getVip() throws Exception {
-        Map<String, Object> listData = Json.parseSafe(api("member?pr=ucpro&fr=pc&uc_param_str=&fetch_subscribe=true&_ch=home&fetch_identity=true", null, 0, "GET"), Map.class);
+        Map<String, Object> listData = Json.parseSafe(api("member?pr=ucpro&fr=pc&uc_param_str=&fetch_subscribe=true&_ch=home&fetch_identity=true", null, null, 0, "GET"), Map.class);
         return "EXP_SVIP".equals(((Map<String, String>) listData.get("data")).get("member_type"));
     }
 
-    private List<String> getPlayFormatList() {
+    public List<String> getPlayFormatList() {
         if (this.isVip) {
             return Arrays.asList("4K", "超清", "高清", "普画");
         } else {
@@ -158,7 +199,7 @@ public class QuarkApi {
     private void getShareToken(ShareData shareData) throws Exception {
         if (!this.shareTokenCache.containsKey(shareData.getShareId())) {
             this.shareTokenCache.remove(shareData.getShareId());
-            Map<String, Object> shareToken = Json.parseSafe(api("share/sharepage/token?" + this.pr, Map.of("pwd_id", shareData.getShareId(), "passcode", shareData.getSharePwd()), 0, "POST"), Map.class);
+            Map<String, Object> shareToken = Json.parseSafe(api("share/sharepage/token?" + this.pr, Collections.emptyMap(), Map.of("pwd_id", shareData.getShareId(), "passcode", shareData.getSharePwd() == null ? "" : shareData.getSharePwd()), 0, "POST"), Map.class);
             if (shareToken.containsKey("data") && ((Map<String, Object>) shareToken.get("data")).containsKey("stoken")) {
                 this.shareTokenCache.put(shareData.getShareId(), (Map<String, Object>) shareToken.get("data"));
             }
@@ -168,7 +209,7 @@ public class QuarkApi {
     private List<Map<String, Object>> listFile(int shareIndex, ShareData shareData, List<Item> videos, List<Item> subtitles, String shareId, String folderId, Integer page) throws Exception {
         int prePage = 200;
         page = page != null ? page : 1;
-        Map<String, Object> listData = Json.parseSafe(api("share/sharepage/detail?" + this.pr + "&pwd_id=" + shareId + "&stoken=" + encodeURIComponent((String) this.shareTokenCache.get(shareId).get("stoken")) + "&pdir_fid=" + folderId + "&force=0&_page=" + page + "&_size=" + prePage + "&_sort=file_type:asc,file_name:asc", null, 0, "GET"), Map.class);
+        Map<String, Object> listData = Json.parseSafe(api("share/sharepage/detail?" + this.pr + "&pwd_id=" + shareId + "&stoken=" + encodeURIComponent((String) this.shareTokenCache.get(shareId).get("stoken")) + "&pdir_fid=" + folderId + "&force=0&_page=" + page + "&_size=" + prePage + "&_sort=file_type:asc,file_name:asc", Collections.emptyMap(), Collections.emptyMap(), 0, "GET"), Map.class);
         if (listData.get("data") == null) return Collections.emptyList();
         List<Map<String, Object>> items = (List<Map<String, Object>>) ((Map<String, Object>) listData.get("data")).get("list");
         if (items == null) return Collections.emptyList();
@@ -177,11 +218,11 @@ public class QuarkApi {
             if (Boolean.TRUE.equals(item.get("dir"))) {
                 subDir.add(item);
             } else if (Boolean.TRUE.equals(item.get("file")) && "video".equals(item.get("obj_category"))) {
-                if ((int) item.get("size") < 1024 * 1024 * 5) continue;
+                if ((Double) item.get("size") < 1024 * 1024 * 5) continue;
                 item.put("stoken", this.shareTokenCache.get(shareData.getShareId()).get("stoken"));
-                videos.add(Item.objectFrom(Json.toJson(item), shareData.getShareId(), shareIndex));
+                videos.add(Item.objectFrom(item, shareData.getShareId(), shareIndex));
             } else if ("file".equals(item.get("type")) && this.subtitleExts.contains("." + Util.getExt((String) item.get("file_name")))) {
-                subtitles.add(Item.objectFrom(Json.toJson(item), shareData.getShareId(), shareIndex));
+                subtitles.add(Item.objectFrom(item, shareData.getShareId(), shareIndex));
             }
         }
         if (page < Math.ceil((double) ((Map<String, Object>) listData.get("metadata")).get("_total") / prePage)) {
@@ -237,16 +278,13 @@ public class QuarkApi {
     }
 
     private void clearSaveDir() throws Exception {
-        Map<String, Object> listData = Json.parseSafe(api("file/sort?" + this.pr + "&pdir_fid=" + this.saveDirId + "&_page=1&_size=200&_sort=file_type:asc,updated_at:desc", Collections.emptyMap(), 0, "GET"), Map.class);
+        Map<String, Object> listData = Json.parseSafe(api("file/sort?" + this.pr + "&pdir_fid=" + this.saveDirId + "&_page=1&_size=200&_sort=file_type:asc,updated_at:desc", Collections.emptyMap(), Collections.emptyMap(), 0, "GET"), Map.class);
         if (listData.get("data") != null && ((List<Map<String, Object>>) ((Map<String, Object>) listData.get("data")).get("list")).size() > 0) {
             List<String> list = new ArrayList<>();
             for (Map<String, Object> stringStringMap : ((List<Map<String, Object>>) ((Map<String, Object>) listData.get("data")).get("list"))) {
                 list.add((String) stringStringMap.get("fid"));
             }
-            api("file/delete?" + this.pr,
-
-
-                    Map.of("action_type", "2", "filelist", Json.toJson(list), "exclude_fids", ""), 0, "POST");
+            api("file/delete?" + this.pr, Collections.emptyMap(), Map.of("action_type", "2", "filelist", Json.toJson(list), "exclude_fids", ""), 0, "POST");
         }
     }
 
@@ -255,7 +293,7 @@ public class QuarkApi {
             if (clean) clearSaveDir();
             return;
         }
-        Map<String, Object> listData = Json.parseSafe(api("file/sort?" + this.pr + "&pdir_fid=0&_page=1&_size=200&_sort=file_type:asc,updated_at:desc", Collections.emptyMap(), 0, "GET"), Map.class);
+        Map<String, Object> listData = Json.parseSafe(api("file/sort?" + this.pr + "&pdir_fid=0&_page=1&_size=200&_sort=file_type:asc,updated_at:desc", Collections.emptyMap(), Collections.emptyMap(), 0, "GET"), Map.class);
         if (listData.get("data") != null) {
             for (Map<String, Object> item : (List<Map<String, Object>>) ((Map<String, Object>) listData.get("data")).get("list")) {
                 if (this.saveDirName.equals(item.get("file_name"))) {
@@ -266,7 +304,7 @@ public class QuarkApi {
             }
         }
         if (this.saveDirId == null) {
-            Map<String, Object> create = Json.parseSafe(api("file?" + this.pr, Map.of("pdir_fid", "0", "file_name", this.saveDirName, "dir_path", "", "dir_init_lock", "false"), 0, "POST"), Map.class);
+            Map<String, Object> create = Json.parseSafe(api("file?" + this.pr, Collections.emptyMap(), Map.of("pdir_fid", "0", "file_name", this.saveDirName, "dir_path", "", "dir_init_lock", "false"), 0, "POST"), Map.class);
             if (create.get("data") != null && ((Map<String, Object>) create.get("data")).get("fid") != null) {
                 this.saveDirId = ((Map<String, Object>) create.get("data")).get("fid").toString();
             }
@@ -283,11 +321,11 @@ public class QuarkApi {
             getShareToken(new ShareData(shareId, null));
             if (!this.shareTokenCache.containsKey(shareId)) return null;
         }
-        Map<String, Object> saveResult = Json.parseSafe(api("share/sharepage/save?" + this.pr, Map.of("fid_list", fileId, "fid_token_list", fileToken, "to_pdir_fid", this.saveDirId, "pwd_id", shareId, "stoken", stoken != null ? stoken : (String) this.shareTokenCache.get(shareId).get("stoken"), "pdir_fid", "0", "scene", "link"), 0, "POST"), Map.class);
+        Map<String, Object> saveResult = Json.parseSafe(api("share/sharepage/save?" + this.pr, null, Map.of("fid_list", List.of(fileId), "fid_token_list", List.of(fileToken), "to_pdir_fid", this.saveDirId, "pwd_id", shareId, "stoken", stoken != null ? stoken : (String) this.shareTokenCache.get(shareId).get("stoken"), "pdir_fid", "0", "scene", "link"), 0, "POST"), Map.class);
         if (saveResult.get("data") != null && ((Map<String, Object>) saveResult.get("data")).get("task_id") != null) {
             int retry = 0;
             while (true) {
-                Map<String, Object> taskResult = Json.parseSafe(api("task?" + this.pr + "&task_id=" + ((Map<String, Object>) saveResult.get("data")).get("task_id") + "&retry_index=" + retry, Collections.emptyMap(), 0, "GET"), Map.class);
+                Map<String, Object> taskResult = Json.parseSafe(api("task?" + this.pr + "&task_id=" + ((Map<String, Object>) saveResult.get("data")).get("task_id") + "&retry_index=" + retry, Collections.emptyMap(), Collections.emptyMap(), 0, "GET"), Map.class);
                 if (taskResult.get("data") != null && ((Map<String, Object>) taskResult.get("data")).get("save_as") != null && ((Map<String, Object>) ((Map<String, Object>) taskResult.get("data")).get("save_as")).get("save_as_top_fids") != null && ((List<String>) ((Map<String, Object>) ((Map<String, Object>) taskResult.get("data")).get("save_as")).get("save_as_top_fids")).size() > 0) {
                     return ((List<String>) ((Map<String, Object>) ((Map<String, Object>) taskResult.get("data")).get("save_as")).get("save_as_top_fids")).get(0);
                 }
@@ -305,7 +343,7 @@ public class QuarkApi {
             if (saveFileId == null) return null;
             this.saveFileIdCaches.put(fileId, saveFileId);
         }
-        Map<String, Object> transcoding = Json.parseSafe(api("file/v2/play?" + this.pr, Map.of("fid", this.saveFileIdCaches.get(fileId), "resolutions", "normal,low,high,super,2k,4k", "supports", "fmp4"), 0, "POST"), Map.class);
+        Map<String, Object> transcoding = Json.parseSafe(api("file/v2/play?" + this.pr, Collections.emptyMap(), Map.of("fid", this.saveFileIdCaches.get(fileId), "resolutions", "normal,low,high,super,2k,4k", "supports", "fmp4"), 0, "POST"), Map.class);
         if (transcoding.get("data") != null && ((Map<String, Object>) transcoding.get("data")).get("video_list") != null) {
             String flagId = flag.split("-")[flag.split("-").length - 1];
             int index = Util.findAllIndexes(getPlayFormatList(), flagId);
@@ -315,7 +353,7 @@ public class QuarkApi {
                     return video.get("video_info").toString();
                 }
             }
-            return ((List<Map<String, Object>>) ((Map<String, Object>) transcoding.get("data")).get("video_list")).get(index).get("video_info").toString();
+            return (String) ((Map<String, Object>) ((List<Map<String, Object>>) ((Map<String, Object>) transcoding.get("data")).get("video_list")).get(index).get("video_info")).get("url");
         }
         return null;
     }
@@ -326,7 +364,7 @@ public class QuarkApi {
             if (saveFileId == null) return null;
             this.saveFileIdCaches.put(fileId, saveFileId);
         }
-        Map<String, Object> down = Json.parseSafe(api("file/download?" + this.pr + "&uc_param_str=", Map.of("fids", this.saveFileIdCaches.get(fileId)), 0, "POST"), Map.class);
+        Map<String, Object> down = Json.parseSafe(api("file/download?" + this.pr + "&uc_param_str=", Collections.emptyMap(), Map.of("fids", this.saveFileIdCaches.get(fileId)), 0, "POST"), Map.class);
         if (down.get("data") != null) {
             return ((List<String>) down.get("data")).get(0);
         }
